<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:id="@+id/lly_login"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvUserName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"/>

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/lly_login_edittext"
        android:background="@drawable/background_shape_edittext"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/lly_login_edittext"
        android:background="@drawable/background_shape_edittext"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cbRemember"
            android:textAppearance="@android:style/TextAppearance.Small.Inverse"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btSignUp"
            style="@style/Widget.Button.Transparent"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btSignIn"
        android:background="@color/bck_facebook"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btSignGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSignGoogle"
        android:background="@color/bck_google"/>

    <Button
        android:id="@+id/btSignFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSignFacebook"
        android:background="@color/bck_facebook"/>
</LinearLayout>