<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/lly_login_padding"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvUserName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/lly_login_edittext"
        android:background="@drawable/background_shape_edittext"
        android:layout_below="@id/tvUserName"
        android:layout_alignLeft="@id/tvUserName"
        />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:layout_below="@id/edUserName"
        android:layout_alignLeft="@id/edUserName"
        />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/lly_login_edittext"
        android:background="@drawable/background_shape_edittext"
        android:layout_below="@id/tvPassword"
        android:layout_alignLeft="@id/tvPassword"/>

    <CheckBox
        android:id="@+id/chRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/cbRemember"
        android:textColor="@android:color/white"
        android:theme="@style/LoginCheckBox"
        android:layout_alignStart="@id/edPassword"
        android:layout_below="@id/edPassword"
        />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btSignUp"
        style="@style/Widget.Button.Transparent"
        android:drawableStart="@color/bck_google"
        android:layout_below="@id/edPassword"
        android:layout_alignEnd="@id/edPassword"
        android:layout_alignBottom="@id/chRemember"
        android:textAlignment="textEnd"
        />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btSignIn"
        android:background="@color/bck_facebook"
        android:layout_gravity="center"
        android:layout_below="@id/btSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/rly_login_btSignIn"
        android:layout_marginBottom="@dimen/rly_login_btSignIn"
        />

    <Button
        android:id="@+id/btSignGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSignGoogle"
        android:background="@color/bck_google"
        android:drawableStart="@drawable/ic_google_icon"
        android:layout_below="@id/btSignIn"
        />

    <Button
        android:id="@+id/btSignFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSignFacebook"
        android:background="@color/bck_facebook"
        android:drawableStart="@drawable/ic_fb_icon"
        android:layout_marginTop="@dimen/lly_buttonMargin"
        android:layout_below="@id/btSignGoogle"
        />

</RelativeLayout>